[project]
name = "archipeleggo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eyed3>=0.9.7",
    "fastapi>=0.115.11",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
start = "api.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = ["types-eyed3>=0.9.7.20250306"]
